crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/patch_rule/priority.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
{
  "uid": "updatable",
  "description": "Updated",
  "priority": 10,
  "active": false,
  "conditions": [],
  "actions": [
    {
      "selector": {
        "id": "42"
      },
      "action": {
        "type": "pin",
        "position": 1
      }
    }
  ]
}
